# django-snacks

./: README.md  pyproject.toml
snacks_project/: db.sqlite3
snacks_project/snacks/: tests.py
snacks_project/snacks_project/: settings.py  urls.py
