[tool.poetry]
name = "django_snacks"
version = "0.1.0"
description = ""
authors = ["mohammad silwadi <mohammadsilwadi1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
